# hpstr

./: .gitignore  .gitmodules  AnaHelpers_8cxx.html  AnaHelpers_8cxx_source.html  AnaHelpers_8h.html  AnaHelpers_8h_source.html  Apv25RoXtalkAnaProcessor_8cxx.html  Apv25RoXtalkAnaProcessor_8cxx_source.html  Apv25RoXtalkAnaProcessor_8h.html  Apv25RoXtalkAnaProcessor_8h_source.html  BaseSelector_8cxx.html  BaseSelector_8cxx_source.html  BaseSelector_8h.html  BaseSelector_8h_source.html  BhMassResSystematicsProcessor_8cxx.html  BhMassResSystematicsProcessor_8cxx_source.html  BhMassResSystematicsProcessor_8h.html  BhMassResSystematicsProcessor_8h_source.html  BhToysHistoProcessor_8cxx.html  BhToysHistoProcessor_8cxx_source.html  BhToysHistoProcessor_8h.html  BhToysHistoProcessor_8h_source.html  BlFitHistos_8cxx.html  BlFitHistos_8cxx_source.html  BlFitHistos_8h.html  BlFitHistos_8h_source.html  BumpHunter_8cxx.html  BumpHunter_8cxx_source.html  BumpHunter_8h.html  BumpHunter_8h_source.html  CMakeLists.txt  CalCluster_8cxx.html  CalCluster_8cxx_source.html  CalCluster_8h.html  CalCluster_8h_source.html  CalHit_8cxx.html  CalHit_8cxx_source.html  CalHit_8h.html  CalHit_8h_source.html  ChebyshevFitFunction_8cxx.html  (+899 more)
analysis/: CMakeLists.txt  Makefile  cmake_install.cmake
analysis/data/: 2016_mc_ana_corrections.json  listData_2016_10percent.txt  listData_2016_10percent_slcio.txt  runByrun_VxVy_calibration.txt  samples_xsections.json  samples_xsections.txt  track_bias_corrections_data_2016.json  track_bias_corrections_data_2021.json  track_bias_corrections_tritrig_2016.json  track_bias_corrections_tritrig_2021.json  v0_projection_2016_config.json  v0_projection_2016_mc_7800_config.json  v0_projection_2016_mc_config.json  v0_projection_2016_mc_signal_config.json  v0_projection_2021_config.json  v0_projection_2021_mc_signal_config.json
analysis/include/: AnaHelpers.h  BaseSelector.h  BaseSelectorSVT.h  BlFitFunction.h  BlFitHistos.h  BumpHunter.h  ChebyshevFitFunction.h  ClusterHistos.h  EcalTimingAnaHistos.h  ExpChebyshevFitFunction.h  FEEDataAnaHistos.h  FEEMCAnaHistos.h  FitFunction.h  FlatTupleMaker.h  FunctionMath.h  HistoManager.h  HistogramHelpers.h  HpsFitResult.h  IterativeCutSelector.h  LegendreFitFunction.h  MCAnaHistos.h  ModuleMapper.h  MollerAnaHistos.h  MutableTTree.h  RawSvtHitHistos.h  RawSvtHitHistos2.h  RawSvtHitMCHistos.h  ReadoutDiagnosticsAnaHistos.h  RecoEcalAnaHistos.h  RecoHitAnaHistos.h  RecoHodoAnaHistos.h  RecoParticleAnaHistos.h  RecoTrackAnaHistos.h  RecoTrackVertexAnaHistos.h  SimPartHistos.h  SimpAnaTTree.h  SimpEquations.h  Svt2DBlHistos.h  SvtCondHistos.h  SvtTimingHistos.h  (+15 more)
analysis/selections/: ESumCR.json  L1CutPos.json  MCTupleForClassification2019.json  Preselection.json  Tight.json  TightNoShared.json  TightNoSharedL0.json  Tight_2016.json  Tight_2019.json  Tight_2021.json  Tight_9hits_2021.json  Tight_L1L1_2021.json  Tight_TM_4pt55.json  Tight_pBot_2016.json  Tight_pBot_2019.json  Tight_pBot_2021.json  (+29 more)
bf_dev/: ModuleMapper.py  backup_offlineBaselineFitAnalysis.py  baselineChannelFits.py  devlog.txt  fitChannelBaselines.py  generateBaselineCSV.py  module_to_channel.py  offlineBaselineFitAnalysis.py  pyfit.sh
event/: CMakeLists.txt  Makefile  cmake_install.cmake  module.modulemap
event/include/: CalCluster.h  CalHit.h  CalorimeterCluster.h  CalorimeterHit.h  Collections.h  Event.h  EventDef.h  EventHeader.h  EventLinkDef.h  FindableTrack.h  HodoCluster.h  HodoHit.h  HpsEvent.h  IEvent.h  MCEcalHit.h  MCParticle.h  MCTrackerHit.h  Particle.h  RawSvtHit.h  TSData.h  Track.h  TrackerHit.h  TriggerData.h  VTPData.h  Vertex.h
event/src/: CalCluster.cxx  CalHit.cxx  CalorimeterCluster.cxx  CalorimeterHit.cxx  Event.cxx  EventHeader.cxx  FindableTrack.cxx  HodoCluster.cxx  HodoHit.cxx  HpsEvent.cxx  MCEcalHit.cxx  MCParticle.cxx  MCTrackerHit.cxx  Particle.cxx  RawSvtHit.cxx  TSData.cxx  Track.cxx  TrackerHit.cxx  TriggerData.cxx  VTPData.cxx  Vertex.cxx
execs/: CMakeLists.txt
hpstr.xcodeproj/: project.pbxproj
plotUtils/: ClustersOnTracks_simple.py  CutFlow.py  ModuleMapper.py  beam_params.py  bumpHunter_backgroundModelSelection.py  bumpHunter_fitDifferencePlots.py  bumpHunter_limitPlots.py  bumpHunter_massResolutionScaleStudy.py  bumpHunter_statisticsPlots.py  bumpHunter_summaryPlots.py  compareHTML.py  compareKalGBL.py  compareMC.py  compareMCHTML.py  ecalTimingStuides.py  gblResidualPlots.py  iterativeFitting.py  makeComparisonPlots.py  makeHTML.py  makeHTML2.py  makeOfflineBaselineDatabaseFile.py  makeVtxProjs.py  offlineBaselineFitAnalysis.py  plotVars.py  plotting.py  smearingPlots.py  structFind6.py  tabulate.py  test.root  trackPropertiesPlots.py  trackhitStackPlots.py  utilities.py
processing/: CMakeLists.txt  Makefile  cmake_install.cmake
processing/include/: Bus.h  ConfigurePython.h  EventFile.h  HpsEventFile.h  IEventFile.h  ParameterSet.h  Process.h  Processor.h  ProcessorFactory.h  TupleBuilder.h  processingDef.h  processingLinkDef.h
processing/python/: HpstrConf.py
processing/src/: ConfigurePython.cxx  EventFile.cxx  HpsEventFile.cxx  ParameterSet.cxx  Process.cxx  Processor.cxx  ProcessorFactory.cxx  TupleBuilder.cxx  hpstr.cxx
processors/: CMakeLists.txt  Makefile  cmake_install.cmake
pyplot/: ClustersOnTracks_simple.py  CutFlow.py  compareMC.py  makeComparisonPlots.py  nhitsPerCC.py  plotting.py  utilities.py
scripts/: AddIdentity.C  apv_csel_pulse_shapes.py  generateResidualConfig.py  iterative_zbi.py  iterative_zbi_6.py  lcio_to_plots.sh  module_to_channel.py  offlineBaselineFitAnalysis.py  run_jobPool.py  run_shPool.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+109 more)
utils/: CMakeLists.txt
(+1007 files in other folders)
